Downgrading dependencies to java 11